# GenAI_Learning

./: .gitignore  requirements.txt
LCEL/: requirements.txt  serve.py  simpleLCEL.ipynb
Lanchain_updates_V1/: pyproject.toml
Lanchain_updates_V1/updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb
Langchain/: requirements.txt
Langchain/1-Langchain/Data_Ingestion/: 3.1.Data-ingestion.ipynb
Langchain/1-Langchain/Data_transformer/: 3.3.text_splitter.ipynb  3.4.Recursive_character-text-splitter.ipynb  3.5.HTMl_textsplitter.ipynb  3.6.jsonSplitter.ipynb
Langchain/1-Langchain/Embeddings/: 4.1.Ollamaembeddings.ipynb  4.2.Huggingfaceembeddings.ipynb
Langchain/1-Langchain/Ollama/: app.ipynb  app.py
Langchain/1-Langchain/Vector-Store/: 5.1.Faiss.ipynb  5.2.Chroma.ipynb
Langchain_Chatbot/: 1.chatbot.ipynb  conversationQA.ipynb  vectorretriver.ipynb
Langchain_Projects/: requirements.txt
Langchain_Projects/1_Q&A_Chatbot/: app.py
Langchain_Projects/2_RAG_Q&A_chatbot/: app.py
Langchain_Projects/3_RAG_conversation/: main.py
Langchain_updates_V1/: main.py  requirements.txt
Langchain_updates_V1/updatedlangchain/: 3-tools.ipynb
python/ML_for_NLP/: Bag_of_words.ipynb  Lemmatization.ipynb  Named_entity_recognition.ipynb  TF_IDF_practical.ipynb  Text_preprocessing_stemming.ipynb  Text_preprocessing_stopwords.ipynb  Tokenization.ipynb  parts_of_speech_tagging.ipynb  word2vec_practical.ipynb
python/streamlit/: app.py  classification.py  widgets.py
(+3 files in other folders)
